specs/014-string-methods/examples/valid/split-method.ts
const parts: string[] = "alpha,beta,gamma".split(",");
console.log(parts.length);
console.log(parts[0]);
console.log(parts[2]);
console.log("a-b-c".split("-").join(" | "));
