specs/014-string-methods/examples/invalid/indexof-arg-type.ts
const s: string = "hello";
// indexOf expects a string argument, not a number.
console.log(s.indexOf(3));
